# langchain-app-test

./: Dockerfile  README.md  compose.yml
.devcontainer/: devcontainer.json
src/: chatbot_engine.py  gradio_app.py  gradio_chatbot.py  pyproject.toml
